agregado logo de bbva

--- a/ac-front-end/src/styles/Usuario/Usuario.css
+++ b/ac-front-end/src/styles/Usuario/Usuario.css
@@ -87,6 +87,11 @@
     
 }
 .usuario-imagen{
-    margin-top:100px;
+    display: block;
+    display: flex;
+    clear: left;
+    margin-bottom:auto;
+    width: 60px;
+    height:30px;
     
 }
