--- a/ac-front-end/src/styles/Usuario/Usuario.css
+++ b/ac-front-end/src/styles/Usuario/Usuario.css
@@ -98,3 +98,21 @@
     height:25px;
     
 }
+.chatbot{
+    display: block;
+    width: 340px;
+    height: 515px;
+    
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 1px;
+    cursor: pointer;
+    background-color: #415164;
+    margin-top: 0.2rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    text-align: center;
+    -webkit-border-radius: 10px;
+    border-radius: 22px;
+}
