--- a/ac-front-end/src/styles/Login/Login.css
+++ b/ac-front-end/src/styles/Login/Login.css
@@ -1,21 +1,20 @@
 .login-logo-bbva {
-    width: 500px;
+    width: 600px;
     height: auto;
-    text-align: left;
-    display: inline-block;
-    padding-right: 700px;
     padding-top: 380px;
     padding-bottom: 380px;
+    padding-left: 0%;
+    padding-right: 0%;
     /*
+    text-align: center;
     top: 10px;
     left: 10px;*/
-    
 }
 
 .login-contenedor {
     background-color: #132535;
     margin-top: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
     margin-left: 30px;
     margin-right: 30px;
     border-radius: 10px;
@@ -26,10 +25,48 @@
 }
 
 .login-datos {
+    float: left;
     background-color: #415164;
     margin-top: 30px;
     margin-bottom: 100px;
     margin-left: 30px;
     margin-right: 30px;
     border-radius: 10px;
+}
+
+.form-contenedor {
+    background-color: #415164;
+    margin-top: 325px;
+    margin-bottom: 200px;
+    margin-left: 30px;
+    margin-right: 60px;
+    border-radius: 10px;
+}
+
+.contenedor-imagen-datos {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+/*.contenedor-imagen-datos div {
+    border: 1px solid black;
+}*/
+
+.item1 {
+    grid-column: 1 / 2;
+}
+
+.item2 {
+    grid-column: 2 / 3;
+}
+
+h1 {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+}
+
+h2 {
+    color: white;
+    text-align: center;
 }
