--- a/ac-front-end/src/styles/Login/Login.css
+++ b/ac-front-end/src/styles/Login/Login.css
@@ -1,51 +1,51 @@
 .login-logo-bbva {
-    width: 600px;
-    height: auto;
-    padding-top: 380px;
-    padding-bottom: 380px;
-    padding-left: 0%;
-    padding-right: 0%;
-    /*
+  width: 600px;
+  height: auto;
+  padding-top: 380px;
+  padding-bottom: 380px;
+  padding-left: 0%;
+  padding-right: 0%;
+  /*
     text-align: center;
     top: 10px;
     left: 10px;*/
 }
 
 .login-contenedor {
-    background-color: #132535;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-    border-radius: 10px;
+  background-color: #132535;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
 }
 
 .login-email {
-    display: block;
+  display: block;
 }
 
 .login-datos {
-    float: left;
-    background-color: #415164;
-    margin-top: 30px;
-    margin-bottom: 100px;
-    margin-left: 30px;
-    margin-right: 30px;
-    border-radius: 10px;
+  float: left;
+  background-color: #415164;
+  margin-top: 30px;
+  margin-bottom: 100px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
 }
 
 .form-contenedor {
-    background-color: #415164;
-    margin-top: 325px;
-    margin-bottom: 200px;
-    margin-left: 30px;
-    margin-right: 60px;
-    border-radius: 10px;
+  background-color: #415164;
+  margin-top: 325px;
+  margin-bottom: 200px;
+  margin-left: 30px;
+  margin-right: 60px;
+  border-radius: 10px;
 }
 
 .contenedor-imagen-datos {
-    display: grid;
-    grid-template-columns: auto auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 /*.contenedor-imagen-datos div {
@@ -53,20 +53,20 @@
 }*/
 
 .item1 {
-    grid-column: 1 / 2;
+  grid-column: 1 / 2;
 }
 
 .item2 {
-    grid-column: 2 / 3;
+  grid-column: 2 / 3;
 }
 
 h1 {
-    color: white;
-    font-size: 3rem;
-    text-align: center;
+  color: white;
+  font-size: 3rem;
+  text-align: center;
 }
 
 h2 {
-    color: white;
-    text-align: center;
+  color: white;
+  text-align: center;
 }
