Progress in Recordings about

--- a/ac-front-end/src/styles/Login/LoginForm.css
+++ b/ac-front-end/src/styles/Login/LoginForm.css
@@ -33,6 +33,7 @@
   background-color: #415164;
   color: white;
   border-radius: 10px;
+  box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
 }
 
 .lgf-container {
