--- a/ac-front-end/src/App.css
+++ b/ac-front-end/src/App.css
@@ -8,3 +8,19 @@
   gap: 3rem;
   grid-template-columns: 1fr 1fr 1fr;
 }
+
+.margin-bottom-sm {
+  margin-bottom: 0.6rem;
+}
+
+.margin-top-sm {
+  margin-top: 0.6rem;
+}
+
+.margin-top-md {
+  margin-top: 1.2rem;
+}
+
+.margin-top-lg {
+  margin-top: 4rem;
+}
