--- a/ac-front-end/src/components/Recordings/RecordingsCard.css
+++ b/ac-front-end/src/components/Recordings/RecordingsCard.css
@@ -6,7 +6,6 @@
   background-color: #415164;
   border-radius: 10px;
   overflow: hidden;
-  cursor: pointer;
 }
 
 .rec-container {
@@ -21,47 +20,72 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 2rem;
+  position: relative;
+}
+
+.rec-video {
+  cursor: pointer;
+}
+
+.rec-video::after {
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+  width: 3rem;
+  height: 3rem;
+  border-style: solid;
+  border-width: 1.5rem 0 1.5rem 3rem;
+  border-color: transparent transparent transparent white;
+  top: 35%;
+  left: 20%;
 }
 
 .rec-video-img {
   height: 10rem;
+  border-radius: 10px;
 }
 
 .rec-video-info {
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
+  cursor: pointer;
 }
 
 .rec-agent-name {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   text-align: end;
 }
 
 .rec-date {
-  font-size: 2rem;
+  font-size: 1.8rem;
   text-align: end;
 }
 
 .rec-score {
   text-align: end;
-  font-size: 2.4rem;
+  font-size: 2.6rem;
 }
 
 .rec-tag-section {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
+  grid-auto-flow: column;
   column-gap: 2rem;
   row-gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .rec-tag {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
-  padding: 0.5rem 1.5rem;
+  background-color: rgb(135, 42, 42);
+  height: 5rem;
+  padding: 0 1.5rem;
   font-size: 2rem;
   color: white;
-  border-radius: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  /* box-shadow: 0 1.2rem 1.2rem rgb(0 0 0 / 8%); */
 }
