--- a/ac-front-end/src/styles/Profile/Profile.css
+++ b/ac-front-end/src/styles/Profile/Profile.css
@@ -26,10 +26,10 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  column-gap: 2rem;
+  column-gap: 4rem;
   grid-template-columns: 1fr 1fr;
 }
-.prfl-container img {
+.prfl-ic {
   height: 50%;
 }
 .prfl-name {
