--- a/ac-front-end/src/styles/AgentList/AllAgentsList.css
+++ b/ac-front-end/src/styles/AgentList/AllAgentsList.css
@@ -6,6 +6,7 @@
   color: white;
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
+  min-height: 500px;
 }
 
 .aal-title {
@@ -25,7 +26,7 @@
 }
 
 .aal-telephone-picture {
-  height: 3rem;
+  height: 2rem;
   width: auto;
   margin-right: 2rem;
 }
