--- a/ac-front-end/src/components/Recordings/GiveFeedbackCard.css
+++ b/ac-front-end/src/components/Recordings/GiveFeedbackCard.css
@@ -1,6 +1,6 @@
-/* Iniitals abc */
+/* Initials: gfc */
 
-.abc-main-container {
+.gfc-main-container {
   width: 30rem;
   color: white;
   background-color: #415164;
@@ -11,7 +11,7 @@
   height: 60rem;
 }
 
-.abc-container {
+.gfc-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -19,54 +19,47 @@
   padding: 2rem;
 }
 
-.abc-navbar {
+.gfc-navbar {
   display: flex;
   justify-content: space-around;
 }
 
-.abc-title {
+.gfc-title {
   font-size: 3rem;
   text-align: center;
   margin-bottom: 1rem;
 }
 
-.abc-title:nth-child(2) {
+.gfc-title:nth-child(1) {
   color: #9facbd;
 }
 
-.abc-container h3 {
+.gfc-container h3 {
   font-weight: 500;
 }
 
-.abc-feeback-score {
+.gfc-feeback-score {
   font-size: 3rem;
+  margin-bottom: 2rem;
 }
 
-.abc-tag-section {
-  display: grid;
-  grid-template-columns: 1fr;
-  column-gap: 2rem;
-  grid-auto-flow: column;
-  row-gap: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+.gfc-input {
+  height: 30rem;
+  border-radius: 10px;
+  /* display: block; */
+  padding: 0.6rem 0.6rem 0.6rem 1.2rem;
+
+  border: none;
+  font-size: 2rem;
+  border-radius: 10px;
+  /* transition: width 0.4s ease-in-out; */
 }
 
-.abc-tag {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(135, 42, 42);
-  height: 4rem;
-  padding: 0 1.5rem;
-  font-size: 1.5rem;
-  color: white;
-  border-radius: 3px;
-  cursor: pointer;
-  /* box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%); */
-}
+/* .gfc-input:active {
+  width: 100%;
+} */
 
-.abc-feedback-btn {
+.gfc-send-btn {
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
@@ -75,4 +68,5 @@
   padding: 1rem;
   cursor: pointer;
   color: #e1e1e1;
+  margin-top: 1rem;
 }
