--- a/ac-front-end/src/styles/AgentList/AgentListSwitch.css
+++ b/ac-front-end/src/styles/AgentList/AgentListSwitch.css
@@ -35,5 +35,5 @@ input:checked + .al-slider {
   background-color: rgb(86, 233, 105);
 }
 input:checked + .al-slider:before {
-  transform: translateX(26px);
+  transform: translateX(1.5rem);
 }
