--- a/ac-front-end/src/components/Menu/Navbar.css
+++ b/ac-front-end/src/components/Menu/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #060b26;
+  background-color: #233445;
   height: 80px;
   display: flex;
   justify-content: start;
@@ -13,26 +13,28 @@
 }
 
 .nav-menu {
-  background-color: #060b26;
-  width: 250px;
+  background-color: #233445;
+  width: 80px;
   height: 100vh;
   display: flex;
   justify-content: center;
   position: fixed;
-  top: 0;
+  top: 80px;
   transition: 850ms;
 }
 
-.nav-menu.active {
-  left: 0;
-  transition: 350ms;
+.nav-menu-items {
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0 0 0 20px;
 }
 
 .nav-text {
   display: flex;
   justify-content: start;
-  align-items: center;
-  padding: 8px 0px 8px 16px;
+  align-items: start;
+  /* padding: 8px 0px 8px 16px; */
   list-style: none;
   height: 60px;
 }
@@ -41,7 +43,7 @@
   text-decoration: none;
   color: #f5f5f5;
   font-size: 18px;
-  width: 95%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -51,10 +53,6 @@
 
 .nav-text a:hover {
   background-color: #9facbd;
-}
-
-.nav-menu-items {
-  width: 100%;
 }
 
 .navbar-toggle {
@@ -72,4 +70,8 @@ span {
 
 .nav-icon {
   height: 5rem;
+}
+
+.side-icon {
+  height: 8rem;
 }
