--- a/ac-front-end/src/styles/Settings/Settings.css
+++ b/ac-front-end/src/styles/Settings/Settings.css
@@ -4,19 +4,29 @@
   justify-content: center;
   align-items: center;
   height: 95vh;
-  background-color: #132535;
   margin: 2rem;
   border-radius: 10px;
   color: white;
+}
+#dark .stngs-main-container {
+  background-color: #132535;
+}
+#light .stngs-main-container {
+  background-color: #e9e9e9;
 }
 .stngs-container {
   width: 80%;
   align-items: center;
 }
+#dark .stngs-container {
+  color: white;
+}
+#light .stngs-container {
+  color: #132535;
+}
 .stngs-option {
   font-size: 3rem;
   font-weight: bold;
-  color: white;
   display: flex;
   gap: 2rem;
   justify-content: space-between;
@@ -27,9 +37,15 @@
   font-size: 2rem;
   font-weight: bold;
   border-radius: 6px;
-  background-color: #415164;
-  color: white;
   border-color: transparent;
   width: 30%;
   padding: 1.2rem;
+}
+#dark .stngs-select {
+  background-color: #415164;
+  color: white;
+}
+#light .stngs-select {
+  background-color: #fdfdfd;
+  color: #132535;
 }
