--- a/ac-front-end/src/components/Recordings/Recordings.css
+++ b/ac-front-end/src/components/Recordings/Recordings.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   background-color: #132535;
-  margin: 2rem;
+  margin: 1rem 2rem 2rem 100px;
   border-radius: 10px;
 }
 
