--- a/ac-front-end/src/styles/Settings/Settings.css
+++ b/ac-front-end/src/styles/Settings/Settings.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 95vh;
-  margin: 2rem;
+  height: 85vh;
+  margin: 1rem 2rem 2rem 100px;
   border-radius: 10px;
   color: white;
 }
