--- a/ac-front-end/src/App.css
+++ b/ac-front-end/src/App.css
@@ -1,4 +1,6 @@
-.container {
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .grid {
@@ -24,9 +26,11 @@
 .margin-top-lg {
   margin-top: 4rem;
 }
+
 #dark {
   background-color: #233445;
 }
+
 #light {
   background-color: #fafafa;
 }
