--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -6,8 +6,22 @@
   box-sizing: border-box;
 }
 
+:root {
+  --background-dark: #233445;
+  --background-light: #fafafa;
+
+  --main-card-dark: #132535;
+  --main-card-light: #e9e9e9;
+
+  --sub-card-dark: #415164;
+  --sub-card-light: #fdfdfd;
+
+  --text-color-dark: #fff;
+  --text-color-light: #132535;
+}
+
 body {
-  background-color: #233445;
+  background-color: var(--background-color);
   margin: 0;
   font-family: "Amazon Ember", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
@@ -15,7 +29,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+body.dark {
+  --background-color: var(--background-dark);
+  --main-card-background: var(--main-card-dark);
+  --sub-card-background: var(--sub-card-dark);
+  --text-color: var(--text-color-dark);
+}
+body.light {
+  --background-color: var(--background-light);
+  --main-card-background: var(--main-card-light);
+  --sub-card-background: var(--sub-card-light);
+  --text-color: var(--text-color-light);
+}
 html {
   /* Format rem */
   font-size: 62.5%;
