--- a/ac-front-end/src/styles/Settings/Settings.css
+++ b/ac-front-end/src/styles/Settings/Settings.css
@@ -6,24 +6,15 @@
   height: 85vh;
   margin: 1rem 2rem 2rem 100px;
   border-radius: 10px;
-  color: white;
+  color: var(--text-color);
+  background-color: var(--main-card-background);
 }
-#dark .stngs-main-container {
-  background-color: #132535;
-}
-#light .stngs-main-container {
-  background-color: #e9e9e9;
-}
+
 .stngs-container {
   width: 80%;
   align-items: center;
 }
-#dark .stngs-container {
-  color: white;
-}
-#light .stngs-container {
-  color: #132535;
-}
+
 .stngs-option {
   font-size: 3rem;
   font-weight: bold;
@@ -40,12 +31,6 @@
   border-color: transparent;
   width: 30%;
   padding: 1.2rem;
-}
-#dark .stngs-select {
-  background-color: #415164;
-  color: white;
-}
-#light .stngs-select {
-  background-color: #fdfdfd;
-  color: #132535;
+  background-color: var(--sub-card-background);
+  color: var(--text-color);
 }
