--- a/ac-front-end/src/components/Menu/Navbar.css
+++ b/ac-front-end/src/components/Menu/Navbar.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   height: 100px;
-  background-color: #233445;
+  background-color: var(--background-color);
   gap: 2rem;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .nav-welcome-text {
-  color: white;
+  color: var(--text-color);
   font-size: 5rem;
 }
 
@@ -29,7 +29,7 @@
 }
 
 .nav-menu {
-  background-color: #233445;
+  background-color: var(--background-color);
   width: 80px;
   height: 100vh;
   display: flex;
@@ -68,7 +68,7 @@
 }
 
 .nav-text a:hover {
-  background-color: #9facbd;
+  background-color: var(--highlight-color);
 }
 
 .navbar-toggle {
