--- a/ac-front-end/src/styles/Dashboard/Dashboard.css
+++ b/ac-front-end/src/styles/Dashboard/Dashboard.css
@@ -1,7 +1,7 @@
 /* Initials: dsb */
 
 .dsb-main-container {
-  background-color: #132535;
+  background-color: var(--main-card-background);
   margin: 2rem;
   border-radius: 10px;
   height: 85vh;
