--- a/ac-front-end/src/styles/Login/Login.css
+++ b/ac-front-end/src/styles/Login/Login.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 95vh;
-  background-color: #132535;
+  background-color: var(--main-card-background);
   margin: 2rem;
   border-radius: 10px;
 }
