--- a/ac-front-end/src/styles/Profile/Profile.css
+++ b/ac-front-end/src/styles/Profile/Profile.css
@@ -6,10 +6,10 @@
   justify-content: center;
   align-items: center;
   height: 95vh;
-  background-color: #132535;
+  background-color: var(--main-card-background);
   margin: 2rem;
   border-radius: 10px;
-  color: white;
+  color: var(--text-color);
 }
 .prfl-sub-container {
   display: flex;
@@ -17,7 +17,7 @@
   justify-content: center;
   align-items: center;
   height: 95vh;
-  background-color: #415164;
+  background-color: var(--sub-card-background);
   margin: 3rem;
   border-radius: 10px;
   width: -webkit-fill-available;
