--- a/ac-front-end/src/components/Menu/Navbar.css
+++ b/ac-front-end/src/components/Menu/Navbar.css
@@ -20,9 +20,8 @@
 
 .nav-welcome-text {
   color: var(--text-color);
-  font-size: 5rem;
+  font-size: var(--h1-title);
 }
-
 .nav-user-icon {
   margin: 0 auto;
   justify-self: end;
