--- a/ac-front-end/src/components/Menu/Navbar.css
+++ b/ac-front-end/src/components/Menu/Navbar.css
@@ -1,11 +1,13 @@
-/* Initials; nav */
+/* Initials: nav */
 
 .navbar {
-  display: flex;
+  display: grid;
+  grid-template-columns: 0.5fr 4fr 0.5fr;
+  height: 10rem;
+  justify-content: center;
   align-items: center;
-  height: 100px;
   background-color: var(--background-color);
-  gap: 2rem;
+  column-gap: 2rem;
 }
 
 .menu-bars {
@@ -24,7 +26,6 @@
 }
 .nav-user-icon {
   margin: 0 auto;
-  justify-self: end;
 }
 
 .nav-menu {
