--- a/ac-front-end/src/components/Recordings/RecordingsVideo.css
+++ b/ac-front-end/src/components/Recordings/RecordingsVideo.css
@@ -5,19 +5,20 @@
   justify-content: center;
   align-items: center;
   background-color: #132535;
-  margin: 2rem;
   border-radius: 10px;
+  margin: 1rem 2rem 2rem 100px;
 }
 
 .rev-container {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  display: flex;
   padding: 3rem;
   align-items: center;
   column-gap: 3rem;
 }
 
 .rev-video {
+  width: 100rem;
   height: 60rem;
+  border-radius: 11px;
   align-self: start;
 }
