AgentList & sidebar now have themes available & settings selects keep selected option on

--- a/ac-front-end/src/components/Menu/Navbar.css
+++ b/ac-front-end/src/components/Menu/Navbar.css
@@ -15,7 +15,9 @@
   font-size: 2rem;
   background: none;
 }
-
+.menu-bars img {
+  content: var(--logo-bbva);
+}
 .nav-icon {
   height: 2.5rem;
 }
