--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -43,7 +43,7 @@
   --text-color-dark-deuteranomaly: #fff;
   --text-color-dark-tritanomaly: #fefffe;
 
-  --highlight-color: #9facbd;
+  --highlight-color-default: #9facbd;
   --highlight-color-protanopia: #a4a4b8;
   --highlight-color-deuteranopia: #a3a2b7;
   --highlight-color-tritanopia: #9fb5b4;
@@ -51,9 +51,20 @@
   --highlight-color-deuteranomaly: #a1a8ba;
   --highlight-color-tritanomaly: #9fb0b9;
 
+  --online-color-default: #90da7e;
+  --online-color-protanopia: #b0b094;
+  --online-color-deuteranopia: #aba699;
+  --online-color-tritanopia: #93a5a9;
+  --online-color-protanomaly: #9dc189;
+  --online-color-deuteranomaly: #9ec68b;
+  --online-color-tritanomaly: #92c18e;
+
   --h1-title-medium: 5rem;
   --h1-title-small: 3rem;
   --h1-title-big: 7rem;
+
+  --logo-bbva-dark: url("images/logo_bbva.png");
+  --logo-bbva-light: url("images/logo_bbva_light.png");
 }
 
 body {
@@ -70,48 +81,72 @@ body.dark {
   --main-card-background: var(--main-card-dark);
   --sub-card-background: var(--sub-card-dark);
   --text-color: var(--text-color-dark);
+  --highlight-color: var(--highlight-color-default);
+  --online-color: var(--online-color-default);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.light {
   --background-color: var(--background-light);
   --main-card-background: var(--main-card-light);
   --sub-card-background: var(--sub-card-light);
   --text-color: var(--text-color-light);
+  --highlight-color: var(--highlight-color-default);
+  --online-color: var(--online-color-default);
+  --logo-bbva: var(--logo-bbva-light);
 }
 body.dark_protanopia {
   --background-color: var(--background-dark-protanopia);
   --main-card-background: var(--main-card-dark-protanopia);
   --sub-card-background: var(--sub-card-dark-protanopia);
   --text-color: var(--text-color-dark-protanopia);
+  --highlight-color: var(--highlight-color-protanopia);
+  --online-color: var(--online-color-protanopia);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_deuteranopia {
   --background-color: var(--background-dark-deuteranopia);
   --main-card-background: var(--main-card-dark-deuteranopia);
   --sub-card-background: var(--sub-card-dark-deuteranopia);
   --text-color: var(--text-color-dark-deuteranopia);
+  --highlight-color: var(--highlight-color-deuteranopia);
+  --online-color: var(--online-color-deuteranopia);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_tritanopia {
   --background-color: var(--background-dark-tritanopia);
   --main-card-background: var(--main-card-dark-tritanopia);
   --sub-card-background: var(--sub-card-dark-tritanopia);
   --text-color: var(--text-color-dark-tritanopia);
+  --highlight-color: var(--highlight-color-tritanopia);
+  --online-color: var(--online-color-tritanopia);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_protanomaly {
   --background-color: var(--background-dark-protanomaly);
   --main-card-background: var(--main-card-dark-protanomaly);
   --sub-card-background: var(--sub-card-dark-protanomaly);
   --text-color: var(--text-color-dark-protanomaly);
+  --highlight-color: var(--highlight-color-protanomaly);
+  --online-color: var(--online-color-protanomaly);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_deuteranomaly {
   --background-color: var(--background-dark-deuteranomaly);
   --main-card-background: var(--main-card-dark-deuteranomaly);
   --sub-card-background: var(--sub-card-dark-deuteranomaly);
   --text-color: var(--text-color-dark-deuteranomaly);
+  --highlight-color: var(--highlight-color-deuteranomaly);
+  --online-color: var(--online-color-deuteranomaly);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_tritanomaly {
   --background-color: var(--background-dark-tritanomaly);
   --main-card-background: var(--main-card-dark-tritanomaly);
   --sub-card-background: var(--sub-card-dark-tritanomaly);
   --text-color: var(--text-color-dark-tritanomaly);
+  --highlight-color: var(--highlight-color-tritanomaly);
+  --online-color: var(--online-color-tritanomaly);
+  --logo-bbva: var(--logo-bbva-dark);
 }
 body.small {
   --h1-title: var(--h1-title-small);
