--- a/ac-front-end/src/styles/AgentList/AllAgentsList.css
+++ b/ac-front-end/src/styles/AgentList/AllAgentsList.css
@@ -2,8 +2,8 @@
 
 .aal-main-container {
   width: 40rem;
-  background-color: #415164;
-  color: white;
+  background-color: var(--sub-card-background);
+  color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
   min-height: 500px;
@@ -52,5 +52,5 @@
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  background: #5cb85c;
+  background: var(--online-color);
 }
