--- a/ac-front-end/src/components/Recordings/RecordingsCard.css
+++ b/ac-front-end/src/components/Recordings/RecordingsCard.css
@@ -80,7 +80,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(135, 42, 42);
   height: 5rem;
   padding: 0 1.5rem;
   font-size: 2rem;
@@ -88,4 +87,16 @@
   border-radius: 3px;
   cursor: pointer;
   /* box-shadow: 0 1.2rem 1.2rem rgb(0 0 0 / 8%); */
+}
+
+.red-tag {
+  background-color: red;
+}
+
+.blue-tag {
+  background-color: blue;
+}
+
+.green-tag {
+  background-color: green;
 }
