--- a/ac-front-end/src/styles/Usuario/Usuario.css
+++ b/ac-front-end/src/styles/Usuario/Usuario.css
@@ -34,7 +34,7 @@
   cursor: pointer;
 }
 .usuario-chatbot-contenedor {
-  width: 380px;
+  width: 370px;
   height: 615px;
 
   display: flex;
@@ -63,7 +63,7 @@
   border-radius: 1px;
   cursor: pointer;
   background-color: #415164;
-  margin-top: 2.5rem;
+  margin-top: 3rem;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
@@ -88,8 +88,8 @@
   width: 350px;
   height: 50px;
   margin-bottom: 0.2rem;
-  margin-top: 2rem;
-  background-color: #3e444b;
+  margin-top: 3rem;
+  background-color: #5f5f5f;
   -webkit-border-radius: 10px;
   border-radius: 16px;
 }
@@ -97,7 +97,7 @@
   display: inline-block;
 
   clear: left;
-  padding-right: 300px;
-  width: 70px;
-  height: 25px;
+  margin-right: 30rem;
+  width: 5rem;
+  height: 2.5rem;
 }
