--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -1,14 +1,14 @@
 /*Initials: tp*/
 
 .tp-main-container {
-  width: 40rem;
+  width: 30rem;
   background-color: var(--sub-card-background);
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
   min-height: 50rem;
 }
-.ta-title {
+.tp-title {
   font-size: 4rem;
   font-weight: bold;
   margin-bottom: 2rem;
@@ -16,4 +16,24 @@
   margin-left: 2rem;
   margin-right: 2rem;
   text-align: center;
+}
+.tp-button {
+  width: 7rem;
+  height: 7rem;
+  display: flex;
+}
+.tp-image {
+  width: 7rem;
+  height: 7rem;
+  margin-left: -0.8rem;
+  margin-top: -0.3rem;
+}
+.tp-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  padding: 2rem 0 2rem 0;
+  min-height: max-content;
 }
