--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -57,6 +57,22 @@
   min-height: max-content;
 }
 .tp-name-label {
-  padding-bottom: 2rem;
-  margin-left: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: right;
+
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  padding: 2rem 2rem 2rem 0;
+  min-height: max-content;
+}
+.tp-input-label {
+  display: flex;
+  justify-content: center;
+  align-items: right;
+  gap: 2rem;
+  flex-wrap: wrap;
+
+  min-height: max-content;
 }
