--- a/ac-front-end/src/styles/Menu/Navbar.css
+++ b/ac-front-end/src/styles/Menu/Navbar.css
@@ -1,21 +1,31 @@
 /* Initials: nav */
 
-.navbar {
+.nav-container {
+  position: relative;
+  margin-bottom: 10rem;
+}
+
+.nav-bar {
   display: grid;
   grid-template-columns: 0.5fr 4fr 0.5fr;
   height: 10rem;
+  width: 100%;
   justify-content: center;
   align-items: center;
   background-color: var(--background-color);
   column-gap: 2rem;
+  /* Maintain navabar on top */
+  position: fixed;
+  left: 0;
+  top: 0;
 }
 
-.menu-bars {
+.nav-menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
 }
-.menu-bars img {
+.nav-menu-bars img {
   content: var(--logo-bbva);
 }
 .nav-icon {
@@ -73,19 +83,13 @@
   background-color: var(--highlight-color);
 }
 
-.navbar-toggle {
-  background-color: #060b26;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
+/* .nav-text a:hover:nth-child(1)::after {
+  content: "america";
+  width: 10px;
+  height: 10px;
 }
-/* 
-span {
-  margin-left: 16px;
+.nav-text a:hover:nth-child(2)::after {
+  content: "ama";
+  width: 10px;
+  height: 10px;
 } */
-
-.side-icon {
-  height: 8rem;
-}
