Added offline color and more variables for text sizes

--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -59,9 +59,25 @@
   --online-color-deuteranomaly: #9ec68b;
   --online-color-tritanomaly: #92c18e;
 
+  --offline-color-default: #ef6269;
+  --offline-color-protanopia: #b1b067;
+  --offline-color-deuteranopia: #bac466;
+  --offline-color-tritanopia: #e76565;
+  --offline-color-protanomaly: #d59068;
+  --offline-color-deuteranomaly: #d28668;
+  --offline-color-tritanomaly: #ea6367;
+
   --h1-title-medium: 5rem;
   --h1-title-small: 3rem;
   --h1-title-big: 7rem;
+
+  --sub-title-medium: 3rem;
+  --sub-title-small: 2rem;
+  --sub-title-big: 4rem;
+
+  --option-text-medium: 2rem;
+  --option-text-small: 1.5rem;
+  --option-text-big: 2.5rem;
 
   --logo-bbva-dark: url("images/logo_bbva.png");
   --logo-bbva-light: url("images/logo_bbva_light.png");
@@ -83,6 +99,7 @@ body.dark {
   --text-color: var(--text-color-dark);
   --highlight-color: var(--highlight-color-default);
   --online-color: var(--online-color-default);
+  --offline-color: var(--offline-color-default);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.light {
@@ -92,6 +109,7 @@ body.light {
   --text-color: var(--text-color-light);
   --highlight-color: var(--highlight-color-default);
   --online-color: var(--online-color-default);
+  --offline-color: var(--offline-color-default);
   --logo-bbva: var(--logo-bbva-light);
 }
 body.dark_protanopia {
@@ -101,6 +119,7 @@ body.dark_protanopia {
   --text-color: var(--text-color-dark-protanopia);
   --highlight-color: var(--highlight-color-protanopia);
   --online-color: var(--online-color-protanopia);
+  --offline-color: var(--offline-color-protanopia);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_deuteranopia {
@@ -110,6 +129,7 @@ body.dark_deuteranopia {
   --text-color: var(--text-color-dark-deuteranopia);
   --highlight-color: var(--highlight-color-deuteranopia);
   --online-color: var(--online-color-deuteranopia);
+  --offline-color: var(--offline-color-deuteranopia);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_tritanopia {
@@ -119,6 +139,7 @@ body.dark_tritanopia {
   --text-color: var(--text-color-dark-tritanopia);
   --highlight-color: var(--highlight-color-tritanopia);
   --online-color: var(--online-color-tritanopia);
+  --offline-color: var(--offline-color-tritanopia);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_protanomaly {
@@ -128,6 +149,7 @@ body.dark_protanomaly {
   --text-color: var(--text-color-dark-protanomaly);
   --highlight-color: var(--highlight-color-protanomaly);
   --online-color: var(--online-color-protanomaly);
+  --offline-color: var(--offline-color-protanomaly);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_deuteranomaly {
@@ -137,6 +159,7 @@ body.dark_deuteranomaly {
   --text-color: var(--text-color-dark-deuteranomaly);
   --highlight-color: var(--highlight-color-deuteranomaly);
   --online-color: var(--online-color-deuteranomaly);
+  --offline-color: var(--offline-color-deuteranomaly);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.dark_tritanomaly {
@@ -146,16 +169,23 @@ body.dark_tritanomaly {
   --text-color: var(--text-color-dark-tritanomaly);
   --highlight-color: var(--highlight-color-tritanomaly);
   --online-color: var(--online-color-tritanomaly);
+  --offline-color: var(--offline-color-tritanomaly);
   --logo-bbva: var(--logo-bbva-dark);
 }
 body.small {
   --h1-title: var(--h1-title-small);
+  --sub-title: var(--sub-title-small);
+  --option-text: var(--option-text-small);
 }
 body.medium {
   --h1-title: var(--h1-title-medium);
+  --sub-title: var(--sub-title-medium);
+  --option-text: var(--option-text-medium);
 }
 body.big {
   --h1-title: var(--h1-title-big);
+  --sub-title: var(--sub-title-big);
+  --option-text: var(--option-text-big);
 }
 html {
   /* Format rem */
