--- a/ac-front-end/src/styles/AgentList/AgListSet.css
+++ b/ac-front-end/src/styles/AgentList/AgListSet.css
@@ -40,7 +40,7 @@
   margin-top: -25rem;
 }
 .al-title {
-  font-size: 4rem;
+  font-size: var(--sub-title);
   font-weight: bold;
   margin-bottom: 2rem;
   margin-top: 2rem;
