--- a/ac-front-end/src/styles/AgentList/AgentListMenu.css
+++ b/ac-front-end/src/styles/AgentList/AgentListMenu.css
@@ -23,13 +23,13 @@
 }
 
 .aglm-search {
-  font-size: 2rem;
+  font-size: var(--option-text);
   border-radius: 10px;
   padding: 1rem 1rem 1rem 2rem;
 }
 
 .aglm-select {
-  font-size: 2rem;
+  font-size: var(--option-text);
   border-radius: 10px;
   padding: 1rem;
   background-color: var(--highlight-color);
@@ -42,7 +42,7 @@
   background-color: transparent;
   color: var(--text-color);
   text-decoration: underline;
-  font-size: 3rem;
+  font-size: var(--sub-title);
   font-weight: bold;
 }
 
@@ -51,6 +51,6 @@
   border-color: transparent;
   background-color: transparent;
   color: gray;
-  font-size: 3rem;
+  font-size: var(--sub-title);
   font-weight: bold;
 }
