Small adjustments of color & hover sidebar

--- a/ac-front-end/src/styles/Menu/Navbar.css
+++ b/ac-front-end/src/styles/Menu/Navbar.css
@@ -82,12 +82,7 @@
 .nav-text a:hover {
   background-color: var(--highlight-color);
 }
-
-/* .nav-text a:hover:nth-child(1)::after {
-  content: "america";
-  width: 10px;
-  height: 10px;
-}
+/*
 .nav-text a:hover:nth-child(2)::after {
   content: "ama";
   width: 10px;
