--- a/ac-front-end/src/styles/Menu/Navbar.css
+++ b/ac-front-end/src/styles/Menu/Navbar.css
@@ -3,6 +3,7 @@
 .nav-container {
   position: relative;
   margin-bottom: 10rem;
+  z-index: 100;
 }
 
 .nav-bar {
@@ -18,6 +19,7 @@
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 100;
 }
 
 .nav-menu-bars {
