--- a/ac-front-end/src/styles/Recordings/RecordingsCard.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsCard.css
@@ -6,6 +6,7 @@
   background-color: var(--sub-card-background);
   border-radius: 10px;
   overflow: hidden;
+  min-height: 20rem;
 }
 
 .rec-container {
