--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -82,7 +82,13 @@
 }
 .tp-submit-button {
   background-color: var(--main-card-background);
-  border-radius: 10px;
-  box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
   color: var(--text-color);
+
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 0.6rem;
+
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
 }
