--- a/ac-front-end/src/styles/Tutorials/Tutorials.css
+++ b/ac-front-end/src/styles/Tutorials/Tutorials.css
@@ -42,7 +42,10 @@ span {
   color: var(--text-color);
   border-radius: 10px;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 15%);
-  min-height: 50rem;
+  min-height: 60rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .t-title {
